--- a/index.html
+++ b/index.html
@@ -22,79 +22,14 @@
     </div>
     <aside>
         <button class="close">&times;</button>
-        <a href="">Model S</a>
+        <a href="models.html">Model S</a>
         <a href="">Model 3</a>
         <a href="">Model X</a>
         <a href="">Model Y</a>
         <a href="">Find Us</a>
         <a href="">Account</a>
     </aside>
-    <section style="background-image: url('images/model-3.jpg')" class="active">
-        <div class="content">
-            <h1>Model 3</h1>
-            <p>Order Online for <a href=""></a>Touchless Delivery</a></p> 
-            <div class="buttons">
-                <a href="">custom order</a> 
-                <a href="">exising inventory</a>
-            </div>
-        </div>
-    </section> 
-    <section style="background-image: url('images/model-y.jpg')">
-        <div class="content">
-            <h1>Model 3</h1>
-            <p>Order Online for <a href=""></a>Touchless Delivery</a></p> 
-        </div>
-    </section> 
-    <section style="background-image: url('images/model-s.jpg')">
-        <div class="content">
-            <h1>Model 3</h1>
-            <p>Order Online for <a href=""></a>Touchless Delivery</a></p> 
-            <div class="buttons">
-                <a href="">custom order</a> 
-                <a href="">exising inventory</a>
-            </div>
-        </div>
-    </section> 
-    <section style="background-image: url('images/model-x.jpg')">
-        <div class="content">
-            <h1>Model 3</h1>
-            <p>Order Online for <a href=""></a>Touchless Delivery</a></p> 
-            <div class="buttons">
-                <a href="">custom order</a> 
-                <a href="">exising inventory</a>
-            </div>
-        </div>
-    </section> 
-    <section style="background-image: url('images/solarpanels.jpg')">
-        <div class="content">
-            <h1>Model 3</h1>
-            <p>Order Online for <a href=""></a>Touchless Delivery</a></p> 
-            <div class="buttons">
-                <a href="">custom order</a> 
-                <a href="">exising inventory</a>
-            </div>
-        </div>
-    </section> 
-    <section style="background-image: url('images/roof.jpg')">
-        <div class="content">
-            <h1>Model 3</h1>
-            <p>Order Online for <a href=""></a>Touchless Delivery</a></p> 
-            <div class="buttons">
-                <a href="">custom order</a> 
-                <a href="">exising inventory</a>
-            </div>
-        </div>
-    </section> 
-    <section style="background-image: url('images/accessories.jpg')">
-        <div class="content">
-            <h1>Model 3</h1>
-            <p>Order Online for <a href=""></a>Touchless Delivery</a></p> 
-            <div class="buttons">
-                <a href="">custom order</a> 
-                <a href="">exising inventory</a>
-            </div>
-        </div>
-    </section>
+    <video autoplay muted loop src="a.mp4" width="1200"></video>
     <script src="nav.js"></script>
     <script src="scroll.js"></script>
 </body> 
