--- a/models2.html
+++ b/models2.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/fav128.png" type="image/x-icon">
-    
 </head>
 <body>
     <header>
@@ -42,12 +41,12 @@
     </div>
     <aside>
         <button class="close">&times;</button>
-        <a href="index.html">Main page</a>
         <a href="models.html">Model S</a>
+        <a href="index.html">Model 3</a>
         <a href="">Model X</a>
         <a href="">Model Y</a>
         <a href="">Find Us</a>
-        <a href="Login_v2/cnt.html">Account</a>
+        <a href="">Account</a>
     </aside>
     
     <section style="background-image: url('images/model-3.jpg')" class="active">
@@ -55,8 +54,8 @@
             <h1>Model 3</h1>
             <p>Order Online for <a href=""></a>Touchless Delivery</a></p> 
             <div class="buttons">
-                <a href="Login_v2/cnt.html">custom order</a> 
-                <a href="Login_v2/cnt.html">exising inventory</a>
+                <a href="">custom order</a> 
+                <a href="">exising inventory</a>
             </div>
         </div>
     </section> 
