--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <a href="">Model X</a>
         <a href="">Model Y</a>
         <a href="">Find Us</a>
-        <a href="">Account</a>
+        <a href="Login_v2/cnt.html">Account</a>
+        <a href="speed/speed.html">Characteristics</a>
     </aside>
     <video autoplay muted loop src="a.mp4" Width=100%></video>
     <script src="nav.js"></script>
