--- a/models.html
+++ b/models.html
@@ -48,6 +48,7 @@
         <a href="">Model Y</a>
         <a href="">Find Us</a>
         <a href="Login_v2/cnt.html">Account</a>
+        <a href="speed/speed.html">Characteristics</a>
     </aside>
     
     <section style="background-image: url('images/model-3.jpg')" class="active">
