--- a/models.html
+++ b/models.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/fav128.png" type="image/x-icon">
-    
+
 </head>
 <body>
     <header>
@@ -49,6 +49,7 @@
         <a href="">Find Us</a>
         <a href="Login_v2/cnt.html">Account</a>
         <a href="speed/speed.html">Characteristics</a>
+        <a href="new.html">Mouseclick</a>
     </aside>
     
     <section style="background-image: url('images/model-3.jpg')" class="active">
