--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
         <a href="">Find Us</a>
         <a href="Login_v2/cnt.html">Account</a>
         <a href="speed/speed.html">Characteristics</a>
+        <a href="new.html">Mouseclick</a>
     </aside>
     <video autoplay muted loop src="a.mp4" Width=100%></video>
     <script src="nav.js"></script>
     <script src="scroll.js"></script>
+    <script src="new.js"></script>
 </body> 
 </html>
